--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-themes": "^0.2.1",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "react-typed": "^2.0.12",
     "yup": "^1.4.0"
   },
   "devDependencies": {
